removed tel auth

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,5 +7,5 @@
 @import './components/scrollbar';
 @import './components/svg-icon';
 @import './components/app-button';
-@import './components/auth-type-radio';
+// @import './components/auth-type-radio';
 @import './components/sign-up-form';
