--- a/src/partials/sign-up-form.html
+++ b/src/partials/sign-up-form.html
@@ -29,7 +29,7 @@
           class="sign-up-form__text-input"
           name="email"
           required
-          placeholder="Mail.here@gmail.com"
+          placeholder="seu.email.aqui@gmail.com"
           type="email"
           autocomplete="email"
         />
