--- a/src/partials/sign-up-form.html
+++ b/src/partials/sign-up-form.html
@@ -1,13 +1,13 @@
 <form
-  class="sign-up-form__form sign-up-form__form--auth-with-email"
+  class="sign-up-form__form sign-up-form__form--auth-with-tel"
   name="signUp"
 >
   <fieldset class="sign-up-form__form-fieldset" name="fieldset">
     <h2 class="sign-up-form__title">Junte-se a nós</h2>
 
-    <!-- {{> auth-type-radio }} -->
+    {{> auth-type-radio }}
 
-    <!-- <div class="sign-up-form__auth-inputs sign-up-form__auth-inputs--tel">
+    <div class="sign-up-form__auth-inputs sign-up-form__auth-inputs--tel">
       <label class="sign-up-form__input-label">
         <div class="sign-up-form__text-input-label">
           Endereço de número de telefone
@@ -16,19 +16,19 @@
           class="sign-up-form__text-input"
           name="tel"
           required
-          placeholder="Número de telefone"
           type="tel"
-          autocomplete="tel"
+          autocomplete="off"
+          placeholder="+55 - __ - ____ - ____"
+          data-slots="_"
         />
       </label>
-    </div> -->
+    </div>
     <div class="sign-up-form__auth-inputs sign-up-form__auth-inputs--email">
       <label class="sign-up-form__input-label">
         <div class="sign-up-form__text-input-label">Endereço de e-mail</div>
         <input
           class="sign-up-form__text-input"
           name="email"
-          required
           placeholder="seu.email.aqui@gmail.com"
           type="email"
           autocomplete="email"
