--- a/src/partials/sign-up-form.html
+++ b/src/partials/sign-up-form.html
@@ -18,7 +18,7 @@
           required
           type="tel"
           autocomplete="off"
-          placeholder="+55 - __ - ____ - ____"
+          placeholder="+55 - __ - _____ - ____"
           data-slots="_"
         />
       </label>
