--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,7 @@
-@import './base/reset';
+@import 'node_modules/mayanbet-sdk/dist/style.css';
+
 @import './base/variables';
-@import './base/helpers';
 @import './base/app';
 
 // Components
-@import './components/scrollbar';
-@import './components/svg-icon';
 @import './components/app-button';
-@import './components/auth-type-radio';
-@import './components/sign-up-form';
